--- a/rizq.html
+++ b/rizq.html
@@ -338,10 +338,15 @@
     <a href="tadabor.html">📚 التدبر</a>
     <a href="heart.html">❤️ القلب</a>
     <a href="book.html">📚 المكتبة</a>
-    <a href="about.html"> أسماء الله الحسنى</a>
-    <a href ="rizq.html">💰 الرزق</a>
-    <a href="taoba.html">التوبة </a>
+    <a href="Main/Names/names.html">🌟 أسماء الله الحسنى</a>
+    <a href="rizq.html">💰 الرزق</a>
+    <a href="taoba.html">🔄 التوبة</a>
     <a href="baraka.html">🌟 البركة</a>
+    <a href="parents.html">👪 الوالدين</a>
+    <a href="rahma.html">🤲 الرحمة</a>
+    <a href="hozn.html">😔 الحزن</a>
+    <a href="shitan.html">😈 الشيطان</a>
+    <a href="believe.html">🕌 الإيمان</a>
     <a href="contact.html">📞 تواصل معنا</a>
   </nav>
 
