sabr - alta3o - ma3ase

--- a/index.html
+++ b/index.html
@@ -583,6 +583,14 @@
     <a href="hozn.html">😔 الحزن</a>
     <a href="shitan.html">😈 الشيطان</a>
     <a href="believe.html">🕌 الإيمان</a>
+    <a href="ma3ase.html"> المعاصي</a>
+    <a href="alta3o.html">الطاعة </a>
+    <a href="sabr.html">⏳ الصبر</a>
+    <a href="charity.html">🎁 الصدقة</a>
+    <a href="fasting.html">🌙 الصيام</a> 
+    <a href="rasol.html">📜 سير الرسول</a>
+    <a href="noom.html">😴 النوم</a>
+    <a href="about.html">ℹ️ من نحن</a>
     <a href="contact.html">📞 تواصل معنا</a>
   </nav>
 
@@ -640,6 +648,7 @@
       "النجاح", "الذكر", "العلم", "العمل", "النية", "الصدق",
       "الوفاء", "العدل", "الإحسان", "الغفران", "الرضا",
       "أسماء الله الحسنى", "الصحبة", "الدعاء", "الصدقة", "الشيطان"
+      ,"الوالدين" , "النوم", "الصلاة", "التدبر", "التزكية" 
     ];
     
     let textIndex = 0;
