--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
     <a href="parents.html">👪 الوالدين</a>
     <a href="rahma.html">🤲 الرحمة</a>
     <a href="hozn.html">😔 الحزن</a>
+    <a href="bala.html" > البلاء</a>
     <a href="shitan.html">😈 الشيطان</a>
     <a href="believe.html">🕌 الإيمان</a>
     <a href="ma3ase.html"> المعاصي</a>
