Friend - Na3m - tazkia

--- a/index.html
+++ b/index.html
@@ -587,13 +587,16 @@
     <a href="ma3ase.html"> المعاصي</a>
     <a href="alta3o.html">الطاعة </a>
     <a href="sabr.html">⏳ الصبر</a>
-    <a href="charity.html">🎁 الصدقة</a>
-    <a href="fasting.html">🌙 الصيام</a> 
+    <a href="na3m.html">النعمة </a>
+    <a href="friends.html">الاصحاب </a>
+    <!-- <a href="charity.html">🎁 الصدقة</a> -->
+    <!-- <a href="fasting.html">🌙 الصيام</a>  -->
     <a href="rasol.html">📜 سير الرسول</a>
     <a href="noom.html">😴 النوم</a>
-    <a href="about.html">ℹ️ من نحن</a>
-    <a href="contact.html">📞 تواصل معنا</a>
+    <!-- <a href="about.html">ℹ️ من نحن</a>
+    <a href="contact.html">📞 تواصل معنا</a> -->
   </nav>
+  
 
   <main>
     <section class="hero-section">
