--- a/ma3ase.html
+++ b/ma3ase.html
@@ -398,20 +398,35 @@
     <p>حقيقتها وآثارها المدمرة وسبل الاعتصام بالله منها</p>
   </header>
 
-  <nav>
-    <a href="index.html">🏠 الرئيسية</a>
+ <nav>
+    <a href="index.html" class="active">🏠 الرئيسية</a>
     <a href="tazkia.html">✨ التزكية</a>
     <a href="salah.html">🕌 الصلاة</a>
     <a href="zaker.html">📿 الذكر</a>
     <a href="tadabor.html">📚 التدبر</a>
     <a href="heart.html">❤️ القلب</a>
     <a href="book.html">📚 المكتبة</a>
-    <a href="about.html">أسماء الله الحسنى</a>
+    <a href="Main/Names/names.html">🌟 أسماء الله الحسنى</a>
     <a href="rizq.html">💰 الرزق</a>
-    <a href="taoba.html">التوبة</a>
+    <a href="taoba.html">🔄 التوبة</a>
     <a href="baraka.html">🌟 البركة</a>
-    <a href="maasi.html" class="active">⚠️ المعاصي</a>
-    <a href="contact.html">📞 تواصل معنا</a>
+    <a href="parents.html">👪 الوالدين</a>
+    <a href="rahma.html">🤲 الرحمة</a>
+    <a href="hozn.html">😔 الحزن</a>
+    <a href="bala.html" > البلاء</a>
+    <a href="shitan.html">😈 الشيطان</a>
+    <a href="believe.html">🕌 الإيمان</a>
+    <a href="ma3ase.html"> المعاصي</a>
+    <a href="alta3o.html">الطاعة </a>
+    <a href="sabr.html">⏳ الصبر</a>
+    <a href="na3m.html">النعمة </a>
+    <a href="friends.html">الاصحاب </a>
+    <!-- <a href="charity.html">🎁 الصدقة</a> -->
+    <!-- <a href="fasting.html">🌙 الصيام</a>  -->
+    <a href="rasol.html">📜 سير الرسول</a>
+    <a href="noom.html">😴 النوم</a>
+    <!-- <a href="about.html">ℹ️ من نحن</a>
+    <a href="contact.html">📞 تواصل معنا</a> -->
   </nav>
 
   <main>
