--- a/rizq.html
+++ b/rizq.html
@@ -330,7 +330,7 @@
     <p>كل ما ينتفع به العبد من خير الدنيا والآخرة</p>
   </header>
 
- <nav>
+<nav>
     <a href="index.html" class="active">🏠 الرئيسية</a>
     <a href="tazkia.html">✨ التزكية</a>
     <a href="salah.html">🕌 الصلاة</a>
@@ -345,9 +345,20 @@
     <a href="parents.html">👪 الوالدين</a>
     <a href="rahma.html">🤲 الرحمة</a>
     <a href="hozn.html">😔 الحزن</a>
+    <a href="bala.html" > البلاء</a>
     <a href="shitan.html">😈 الشيطان</a>
     <a href="believe.html">🕌 الإيمان</a>
-    <a href="contact.html">📞 تواصل معنا</a>
+    <a href="ma3ase.html"> المعاصي</a>
+    <a href="alta3o.html">الطاعة </a>
+    <a href="sabr.html">⏳ الصبر</a>
+    <a href="na3m.html">النعمة </a>
+    <a href="friends.html">الاصحاب </a>
+    <!-- <a href="charity.html">🎁 الصدقة</a> -->
+    <!-- <a href="fasting.html">🌙 الصيام</a>  -->
+    <a href="rasol.html">📜 سير الرسول</a>
+    <a href="noom.html">😴 النوم</a>
+    <!-- <a href="about.html">ℹ️ من نحن</a>
+    <a href="contact.html">📞 تواصل معنا</a> -->
   </nav>
 
 
