--- a/friends.html
+++ b/friends.html
@@ -363,8 +363,8 @@
     <p>الصاحب ساحب، إما إلى الجنة وإما إلى النار</p>
   </header>
 
-  <nav>
-    <a href="index.html">🏠 الرئيسية</a>
+ <nav>
+    <a href="index.html" class="active">🏠 الرئيسية</a>
     <a href="tazkia.html">✨ التزكية</a>
     <a href="salah.html">🕌 الصلاة</a>
     <a href="zaker.html">📿 الذكر</a>
@@ -378,12 +378,21 @@
     <a href="parents.html">👪 الوالدين</a>
     <a href="rahma.html">🤲 الرحمة</a>
     <a href="hozn.html">😔 الحزن</a>
+    <a href="bala.html" > البلاء</a>
     <a href="shitan.html">😈 الشيطان</a>
     <a href="believe.html">🕌 الإيمان</a>
-    <a href="ashab.html" class="active">👥 الأصحاب</a>
-    <a href="contact.html">📞 تواصل معنا</a>
+    <a href="ma3ase.html"> المعاصي</a>
+    <a href="alta3o.html">الطاعة </a>
+    <a href="sabr.html">⏳ الصبر</a>
+    <a href="na3m.html">النعمة </a>
+    <a href="friends.html">الاصحاب </a>
+    <!-- <a href="charity.html">🎁 الصدقة</a> -->
+    <!-- <a href="fasting.html">🌙 الصيام</a>  -->
+    <a href="rasol.html">📜 سير الرسول</a>
+    <a href="noom.html">😴 النوم</a>
+    <!-- <a href="about.html">ℹ️ من نحن</a>
+    <a href="contact.html">📞 تواصل معنا</a> -->
   </nav>
-
   <main>
 
     <section id="meaning">
@@ -568,7 +577,7 @@
 
         <div class="info-card">
           <h4>2. الصدق والأمانة</h4>
-          <p>﴿يَا أَيُّهَا الَّذِينَ آمَنُوا اتَRetryClaude does not have the ability to run the code it generates yet.MContinuehtmlقُوا اللَّهَ وَكُونُوا مَعَ الصَّادِقِينَ﴾</p>
+          <p>﴿يَا أَيُّهَا الَّذِينَ آمَنُوا اتَقُوا اللَّهَ وَكُونُوا مَعَ الصَّادِقِينَ﴾</p>
         </div>
 
         <div class="info-card">
