Add Night , Shaba , update in Rasol.html

--- a/rasol.html
+++ b/rasol.html
@@ -336,6 +336,63 @@
         grid-template-columns: 1fr;
       }
     }
+    .family-section {
+    margin-top: 30px;
+    padding: 20px;
+    background: linear-gradient(135deg, #f5f5f5 0%, #e8f5e9 100%);
+    border-radius: 12px;
+    border-right: 4px solid #00695c;
+  }
+
+  .family-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 15px;
+    margin-top: 15px;
+  }
+
+  .family-card {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    border-right: 3px solid #00897b;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .family-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 15px rgba(0, 105, 92, 0.15);
+  }
+
+  .family-card h4 {
+    color: #00695c;
+    font-size: 1.1rem;
+    margin-bottom: 8px;
+    font-weight: 700;
+  }
+
+  .family-card p {
+    color: #424242;
+    font-size: 0.95rem;
+    margin: 0;
+    line-height: 1.6;
+  }
+
+  .family-card.special {
+    background: linear-gradient(135deg, #fff8e1 0%, #ffecb3 100%);
+    border-right: 3px solid #f57c00;
+  }
+
+  .family-card.special h4 {
+    color: #e65100;
+  }
+
+  @media (max-width: 768px) {
+    .family-cards {
+      grid-template-columns: 1fr;
+    }
+  }
   </style>
 
 </head>
@@ -452,6 +509,518 @@
           ومن عصى الرسول فقد عصى الله، فالرسول إنما أمر بما أمر الله به، ونهى عما نهى الله عنه"
         </p>
       </div>
+    </section>
+
+    <section id="family-tree">
+  <h2>🌳 شجرة عائلة النبي محمد ﷺ</h2>
+  
+  <div class="family-section">
+    <h3>👑 النبي محمد بن عبد الله بن عبد المطلب</h3>
+    <div class="info-grid">
+      <div class="info-card">
+        <h4>الاسم الكامل</h4>
+        <p>محمد بن عبد الله بن عبد المطلب بن هاشم بن عبد مناف بن قصي</p>
+      </div>
+      <div class="info-card">
+        <h4>الكنية</h4>
+        <p>أبو القاسم ﷺ</p>
+      </div>
+      <div class="info-card">
+        <h4>الميلاد</h4>
+        <p>عام الفيل بمكة (حوالي 570م)</p>
+      </div>
+      <div class="info-card">
+        <h4>الوفاة</h4>
+        <p>11 هـ بالمدينة المنورة</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👨‍👩‍👦 والدا النبي ﷺ</h3>
+    <div class="info-grid">
+      <div class="info-card">
+        <h4>الأب: عبد الله بن عبد المطلب</h4>
+        <p>توفي والنبي ﷺ في بطن أمه (كان شابًا في نحو 25 سنة)</p>
+      </div>
+      <div class="info-card">
+        <h4>الأم: آمنة بنت وهب</h4>
+        <p>من أشراف قريش، توفيت والنبي ﷺ عمره 6 سنوات بالأبواء</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👴 الجد والجدة</h3>
+    <div class="info-grid">
+      <div class="info-card">
+        <h4>الجد: عبد المطلب</h4>
+        <p>شيبة الحمد - سيد قريش، حافر بئر زمزم</p>
+      </div>
+      <div class="info-card">
+        <h4>الجدة: فاطمة بنت عمرو</h4>
+        <p>من بني مخزوم</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👨‍👦‍👦 أعمام النبي ﷺ</h3>
+    <div class="family-cards">
+      <div class="family-card">
+        <h4>🦁 حمزة بن عبد المطلب</h4>
+        <p>أسد الله وأسد رسوله، استُشهد في أحد</p>
+      </div>
+      <div class="family-card">
+        <h4>العباس بن عبد المطلب</h4>
+        <p>أسلم قبل فتح مكة، جد الخلفاء العباسيين</p>
+      </div>
+      <div class="family-card">
+        <h4>أبو طالب</h4>
+        <p>كفل النبي ﷺ صغيرًا وناصره</p>
+      </div>
+      <div class="family-card">
+        <h4>أبو لهب</h4>
+        <p>عدو الإسلام، نزلت فيه سورة المسد</p>
+      </div>
+      <div class="family-card">
+        <h4>الزبير بن عبد المطلب</h4>
+        <p>من السابقين في نصرة النبي</p>
+      </div>
+      <div class="family-card">
+        <h4>الحارث بن عبد المطلب</h4>
+        <p>أكبر أبناء عبد المطلب</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👩‍🦰 عمّات النبي ﷺ</h3>
+    <div class="family-cards">
+      <div class="family-card">
+        <h4>صفية بنت عبد المطلب</h4>
+        <p>أم الزبير بن العوام، من المؤمنات المجاهدات</p>
+      </div>
+      <div class="family-card">
+        <h4>عاتكة بنت عبد المطلب</h4>
+        <p>رأت رؤيا مشهورة قبل بدر</p>
+      </div>
+      <div class="family-card">
+        <h4>أروى بنت عبد المطلب</h4>
+        <p>عمة النبي ﷺ الكريمة</p>
+      </div>
+      <div class="family-card">
+        <h4>أم حكيم البيضاء</h4>
+        <p>بنت عبد المطلب</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+  <h3>👨‍👩‍👧 أخوال وخالات النبي ﷺ</h3>
+  <p style="color: #424242; margin-bottom: 20px;">
+    أخوال النبي ﷺ من بني زهرة، وهم أخوال أمه آمنة بنت وهب
+  </p>
+  
+  <h4 style="color: #00695c; margin-top: 20px;">أخوال النبي ﷺ:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>عبد يغوث بن وهب</h4>
+      <p>خال النبي ﷺ من بني زهرة</p>
+    </div>
+    <div class="family-card">
+      <h4>أسود بن وهب</h4>
+      <p>خال النبي ﷺ، من أشراف بني زهرة</p>
+    </div>
+    <div class="family-card">
+      <h4>عمرو بن وهب</h4>
+      <p>خال النبي ﷺ من قبيلة بني زهرة</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">خالات النبي ﷺ (أخوات آمنة بنت وهب):</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>عاتكة بنت وهب</h4>
+      <p>خالة النبي ﷺ من بني زهرة</p>
+    </div>
+    <div class="family-card">
+      <h4>برة بنت وهب</h4>
+      <p>خالة النبي ﷺ، أخت آمنة</p>
+    </div>
+    <div class="family-card">
+      <h4>أروى بنت وهب</h4>
+      <p>خالة النبي ﷺ الكريمة</p>
+    </div>
+  </div>
+
+  <div class="hadith-box" style="margin-top: 25px;">
+    <p>
+      💡 كان النبي ﷺ يحسن إلى أخواله ويكرمهم، وقد قال ﷺ: "أنا ابن العواتك من سليم"
+      يفتخر بأمهاته من قبيلة بني سليم. وكان يزور قبر أمه ويبكي عندها.
+    </p>
+  </div>
+
+  <div class="ayah-box" style="margin-top: 20px;">
+    ﴿وَوَصَّيْنَا الْإِنسَانَ بِوَالِدَيْهِ حَمَلَتْهُ أُمُّهُ وَهْنًا عَلَىٰ وَهْنٍ﴾<br>
+    <span style="font-size: 1rem; opacity: 0.8;">[لقمان: 14]</span>
+  </div>
+  </div>
+
+  <div class="family-section">
+  <h3>👥 أولاد أعمام النبي ﷺ</h3>
+  <p style="color: #424242; margin-bottom: 20px;">
+    أبناء عم النبي ﷺ من أعمامه، وهم من أقرب الناس إليه نسباً
+  </p>
+  
+  <h4 style="color: #00695c; margin-top: 20px;">من أبناء أبي طالب:</h4>
+  <div class="family-cards">
+    <div class="family-card special">
+      <h4>علي بن أبي طالب رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ وزوج ابنته فاطمة، رابع الخلفاء الراشدين</p>
+    </div>
+    <div class="family-card special">
+      <h4>جعفر بن أبي طالب رضي الله عنه</h4>
+      <p>الطيار، استشهد في مؤتة، قال عنه النبي ﷺ: "أشبهت خَلقي وخُلقي"</p>
+    </div>
+    <div class="family-card">
+      <h4>عقيل بن أبي طالب رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ، أسلم عام الفتح</p>
+    </div>
+    <div class="family-card">
+      <h4>طالب بن أبي طالب</h4>
+      <p>ابن عم النبي ﷺ، استشهد في بدر على الكفر</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء الحمزة بن عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>يعلى بن الحمزة</h4>
+      <p>ابن أسد الله، تربى في كنف النبي ﷺ</p>
+    </div>
+    <div class="family-card">
+      <h4>عمارة بن الحمزة</h4>
+      <p>ابن عم النبي ﷺ من الحمزة</p>
+    </div>
+    <div class="family-card">
+      <h4>أمة الله بنت الحمزة</h4>
+      <p>بنت أسد الله، أخذها علي بن أبي طالب بعد استشهاد أبيها</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء العباس بن عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card special">
+      <h4>عبد الله بن عباس رضي الله عنه</h4>
+      <p>حبر الأمة وترجمان القرآن، دعا له النبي ﷺ بالعلم والحكمة</p>
+    </div>
+    <div class="family-card">
+      <h4>الفضل بن العباس رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ، أردفه النبي خلفه في حجة الوداع</p>
+    </div>
+    <div class="family-card">
+      <h4>قثم بن العباس رضي الله عنه</h4>
+      <p>كان يشبه النبي ﷺ كثيراً</p>
+    </div>
+    <div class="family-card">
+      <h4>عبيد الله بن العباس رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ من العباس</p>
+    </div>
+    <div class="family-card">
+      <h4>معبد بن العباس رضي الله عنه</h4>
+      <p>من أبناء عم النبي ﷺ</p>
+    </div>
+    <div class="family-card">
+      <h4>تمام بن العباس</h4>
+      <p>ابن عم النبي ﷺ، ولد في عهد النبوة</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء أبي لهب:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>عتبة بن أبي لهب</h4>
+      <p>كان قد طلق رقية بنت النبي ﷺ قبل الهجرة</p>
+    </div>
+    <div class="family-card">
+      <h4>عتيبة بن أبي لهب</h4>
+      <p>آذى النبي ﷺ فدعا عليه، فقتله الأسد</p>
+    </div>
+    <div class="family-card">
+      <h4>معتب بن أبي لهب</h4>
+      <p>أسلم يوم الفتح وحسن إسلامه</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء الحارث بن عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card special">
+      <h4>أبو سفيان بن الحارث رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ وأخوه من الرضاعة، أسلم عام الفتح وحسن إسلامه</p>
+    </div>
+    <div class="family-card">
+      <h4>نوفل بن الحارث رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ، أسلم وشهد حنيناً</p>
+    </div>
+    <div class="family-card">
+      <h4>ربيعة بن الحارث رضي الله عنه</h4>
+      <p>ابن عم النبي ﷺ، من المسلمين</p>
+    </div>
+  </div>
+</div>
+
+<div class="family-section">
+  <h3>👥 أولاد عمات النبي ﷺ</h3>
+  <p style="color: #424242; margin-bottom: 20px;">
+    أبناء عمات النبي ﷺ، وهم أقاربه من جهة الأم
+  </p>
+  
+  <h4 style="color: #00695c; margin-top: 20px;">من أبناء صفية بنت عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card special">
+      <h4>الزبير بن العوام رضي الله عنه</h4>
+      <p>حواري رسول الله ﷺ، أحد العشرة المبشرين بالجنة، وأول من سل سيفاً في الإسلام</p>
+    </div>
+    <div class="family-card">
+      <h4>السائب بن العوام</h4>
+      <p>أخو الزبير، ابن عمة النبي ﷺ</p>
+    </div>
+    <div class="family-card">
+      <h4>عبد الكعبة بن العوام</h4>
+      <p>ابن عمة النبي ﷺ صفية</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء عاتكة بنت عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>عبد الله بن أبي أمية</h4>
+      <p>ابن عمة النبي ﷺ، أسلم عام الفتح</p>
+    </div>
+    <div class="family-card">
+      <h4>زهير بن أبي أمية</h4>
+      <p>ابن عمة النبي ﷺ عاتكة</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء أروى بنت عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>طليب بن عمير</h4>
+      <p>ابن عمة النبي ﷺ أروى</p>
+    </div>
+    <div class="family-card">
+      <h4>عبد الله بن عمير</h4>
+      <p>ابن عمة النبي ﷺ</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء أم حكيم البيضاء بنت عبد المطلب:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>أروى بنت كريز</h4>
+      <p>بنت عمة النبي ﷺ، وهي أم عثمان بن عفان رضي الله عنه</p>
+    </div>
+  </div>
+
+  <div class="hadith-box" style="margin-top: 25px;">
+    <p>
+      💡 كان النبي ﷺ يصل رحمه ويكرم أقاربه، وقد قال ﷺ: "من أحب أن يُبسط له في رزقه 
+      ويُنسأ له في أثره فليصل رحمه" [متفق عليه]
+    </p>
+  </div>
+
+  <div class="ayah-box" style="margin-top: 20px;">
+    ﴿وَأُولُو الْأَرْحَامِ بَعْضُهُمْ أَوْلَىٰ بِبَعْضٍ فِي كِتَابِ اللَّهِ﴾<br>
+    <span style="font-size: 1rem; opacity: 0.8;">[الأنفال: 75]</span>
+  </div>
+</div>
+
+<div class="family-section">
+  <h3>👥 أولاد أخوال وخالات النبي ﷺ</h3>
+  <p style="color: #424242; margin-bottom: 20px;">
+    أبناء أخوال وخالات النبي ﷺ من بني زهرة، وهم من أقرب أقاربه من جهة أمه آمنة بنت وهب
+  </p>
+  
+  <h4 style="color: #00695c; margin-top: 20px;">من أبناء عبد يغوث بن وهب (خال النبي ﷺ):</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>أبو سلمة بن عبد الأسد المخزومي</h4>
+      <p>ابن برة بنت عبد المطلب (عمة النبي)، زوج أم سلمة التي تزوجها النبي ﷺ بعده</p>
+    </div>
+    <div class="family-card">
+      <h4>عبد الله بن عبد الأسد</h4>
+      <p>من أقارب النبي ﷺ من جهة الأم</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء أسود بن وهب (خال النبي ﷺ):</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>يزيد بن الأسود</h4>
+      <p>ابن خال النبي ﷺ من بني زهرة</p>
+    </div>
+    <div class="family-card">
+      <h4>السائب بن الأسود</h4>
+      <p>ابن خال النبي ﷺ، من أقاربه من جهة أمه</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء عمرو بن وهب (خال النبي ﷺ):</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>المطلب بن عمرو</h4>
+      <p>ابن خال النبي ﷺ من بني زهرة</p>
+    </div>
+  </div>
+
+  <h4 style="color: #00695c; margin-top: 25px;">من أبناء خالات النبي ﷺ:</h4>
+  <div class="family-cards">
+    <div class="family-card">
+      <h4>حذافة بن غانم</h4>
+      <p>ابن خالة النبي ﷺ من بني زهرة</p>
+    </div>
+    <div class="family-card">
+      <h4>عبد الرحمن بن الحارث</h4>
+      <p>من أبناء خالات النبي ﷺ</p>
+    </div>
+    <div class="family-card">
+      <h4>قيس بن مخرمة بن المطلب</h4>
+      <p>من أقارب النبي ﷺ من جهة أمه، من بني زهرة</p>
+    </div>
+  </div>
+
+  <div class="hadith-box" style="margin-top: 25px;">
+    <p>
+      💡 كان بنو زهرة (أخوال النبي ﷺ) من أكرم العرب، وكان النبي ﷺ يفتخر بهم ويقول: 
+      "أنا ابن العواتك من سليم"، وكان يكرمهم ويحسن إليهم. وقد قال ﷺ: "الخالة بمنزلة الأم" [رواه البخاري]
+    </p>
+  </div>
+
+  <div class="ayah-box" style="margin-top: 20px;">
+    ﴿وَاعْبُدُوا اللَّهَ وَلَا تُشْرِكُوا بِهِ شَيْئًا ۖ وَبِالْوَالِدَيْنِ إِحْسَانًا وَبِذِي الْقُرْبَىٰ﴾<br>
+    <span style="font-size: 1rem; opacity: 0.8;">[النساء: 36]</span>
+  </div>
+</div>
+
+  <div class="family-section">
+    <h3>💍 زوجات النبي ﷺ (أمهات المؤمنين)</h3>
+    <div class="family-cards">
+      <div class="family-card special">
+        <h4>❤️ خديجة بنت خويلد</h4>
+        <p>أول زوجاته وأم أولاده، لم يتزوج عليها في حياتها</p>
+      </div>
+      <div class="family-card">
+        <h4>سودة بنت زمعة</h4>
+        <p>أم المؤمنين الكريمة</p>
+      </div>
+      <div class="family-card">
+        <h4>عائشة بنت أبي بكر</h4>
+        <p>العالمة الفقيهة، الصديقة بنت الصديق</p>
+      </div>
+      <div class="family-card">
+        <h4>حفصة بنت عمر</h4>
+        <p>حارسة القرآن الكريم</p>
+      </div>
+      <div class="family-card">
+        <h4>زينب بنت خزيمة</h4>
+        <p>أم المساكين</p>
+      </div>
+      <div class="family-card">
+        <h4>أم سلمة هند بنت أبي أمية</h4>
+        <p>الحكيمة الرشيدة</p>
+      </div>
+      <div class="family-card">
+        <h4>زينب بنت جحش</h4>
+        <p>أطول أمهات المؤمنين يداً بالصدقة</p>
+      </div>
+      <div class="family-card">
+        <h4>جويرية بنت الحارث</h4>
+        <p>بركة على قومها</p>
+      </div>
+      <div class="family-card">
+        <h4>صفية بنت حيي</h4>
+        <p>من بني إسرائيل الشريفة</p>
+      </div>
+      <div class="family-card">
+        <h4>أم حبيبة رملة بنت أبي سفيان</h4>
+        <p>المهاجرة الصابرة</p>
+      </div>
+      <div class="family-card">
+        <h4>ميمونة بنت الحارث</h4>
+        <p>آخر من تزوج النبي ﷺ</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👶 أبناء وبنات النبي ﷺ</h3>
+    
+    <h4 style="color: #00695c; margin-top: 20px;">من خديجة بنت خويلد:</h4>
+    <div class="family-cards">
+      <div class="family-card">
+        <h4>القاسم</h4>
+        <p>أول أبنائه (ومن كنيته "أبو القاسم")</p>
+      </div>
+      <div class="family-card">
+        <h4>عبد الله</h4>
+        <p>الطيب والطاهر - مات صغيرًا</p>
+      </div>
+      <div class="family-card">
+        <h4>زينب</h4>
+        <p>أكبر بناته، زوجة أبي العاص بن الربيع</p>
+      </div>
+      <div class="family-card">
+        <h4>رُقية</h4>
+        <p>زوجة عثمان بن عفان</p>
+      </div>
+      <div class="family-card">
+        <h4>أم كلثوم</h4>
+        <p>زوجة عثمان بعد وفاة رقية</p>
+      </div>
+      <div class="family-card special">
+        <h4>🌹 فاطمة الزهراء</h4>
+        <p>زوجة علي بن أبي طالب، أم الحسن والحسين</p>
+      </div>
+    </div>
+
+    <h4 style="color: #00695c; margin-top: 20px;">من مارية القبطية:</h4>
+    <div class="family-cards">
+      <div class="family-card">
+        <h4>إبراهيم</h4>
+        <p>مات صغيرًا بالمدينة</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="family-section">
+    <h3>👶 أحفاد النبي ﷺ من فاطمة الزهراء</h3>
+    <div class="family-cards">
+      <div class="family-card special">
+        <h4>الحسن بن علي</h4>
+        <p>سيد شباب أهل الجنة</p>
+      </div>
+      <div class="family-card special">
+        <h4>الحسين بن علي</h4>
+        <p>سيد شباب أهل الجنة</p>
+      </div>
+      <div class="family-card">
+        <h4>زينب بنت علي</h4>
+        <p>حفيدة النبي ﷺ الكريمة</p>
+      </div>
+      <div class="family-card">
+        <h4>أم كلثوم بنت علي</h4>
+        <p>حفيدة النبي ﷺ الشريفة</p>
+      </div>
+    </div>
+    
+    <div class="hadith-box" style="margin-top: 20px;">
+      <p>
+        💡 من نسل الحسن والحسين جاء أشراف مكة وآل البيت الكرام المنتسبون للنبي ﷺ
+      </p>
+    </div>
+  </div>
     </section>
 
     <section id="goodness">
