--- a/index.html
+++ b/index.html
@@ -589,6 +589,8 @@
     <a href="sabr.html">⏳ الصبر</a>
     <a href="na3m.html">النعمة </a>
     <a href="friends.html">الاصحاب </a>
+    <a href="sahaba.html">صحابة الرسول </a>
+    <a href="night.html">قيام الليل </a>
     <!-- <a href="charity.html">🎁 الصدقة</a> -->
     <!-- <a href="fasting.html">🌙 الصيام</a>  -->
     <a href="rasol.html">📜 سير الرسول</a>
