2 add time istegfar

--- a/index.html
+++ b/index.html
@@ -591,6 +591,8 @@
     <a href="friends.html">الاصحاب </a>
     <a href="sahaba.html">صحابة الرسول </a>
     <a href="night.html">قيام الليل </a>
+    <a href="time.html"> الوقت</a>
+    <a href="istegfar.html">الاستغفار </a>
     <!-- <a href="charity.html">🎁 الصدقة</a> -->
     <!-- <a href="fasting.html">🌙 الصيام</a>  -->
     <a href="rasol.html">📜 سير الرسول</a>
